# argparse-c-cxx

./: .gitignore  CMakeLists.txt  README.md
c/: CMakeLists.txt  README.md
c/examples/: flags.c
c/src/: argparse.c  argparse.h
cxx/: CMakeLists.txt  README.md
cxx/examples/: commands.cxx  flags.cxx
cxx/src/: argparse.cxx  argparse.hxx
examples/: commands.cxx  flags.c  flags.cxx
src/: argparse.c  argparse.cxx  argparse.h  argparse.hxx
